--- a/restgo.yaml
+++ b/restgo.yaml
@@ -1,7 +1,6 @@
 dns: root:root@(127.0.0.1:3306)/test?charset=utf8mb4&loc=Local
-lang: go
+lang: java
 model: test
-package: turingapp
-serverdir: ./
+package: com.turingdance.modules.biz
 table: test
-tpldir: ./tmpl-go
+tpldir: ./tmpl-java
