--- a/restgo.yaml
+++ b/restgo.yaml
@@ -4,7 +4,7 @@ model: test
 package: com.turingdance.modules.biz
 table: test
 tpldir: ./tmpl-java
-
+filedsIgnored: create_at,update_by,create_by,delete_at,update_at,deleted
 datatypego:
   tinyint:   int
 	smallint:  int
